<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_video"
        android:title="@string/videos" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_merch"
        android:title="@string/merch" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_apps"
        android:title="@string/apps" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/community" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>